Money Manager 25.9.1
* Java 25, JavaFX 25